Finished/Added onscreen keyboard functionality -> Added ::active pseudo class to the .key css to show the key as been pressed -> Changed the delete html text to fix some weird spacing issues when being logged in console.log and stuff -> Put logKey() in each of the onscreen code blocks and passed through the "key.textContent" values

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,11 @@ button {
     box-shadow: 1px 2px 1px 1px black;
 }
 
+.key:active {
+    background-color: #b47cfb;
+    color: white;
+}
+
 #inputContainer {
     display: flex;
     flex-direction: column;
